--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "RNCourse",
-    "slug": "RNCourse",
+    "name": "UserAuthentication",
+    "slug": "UserAuthentication",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
