--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rncourse",
+  "name": "UserAuthentication",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -10,10 +10,12 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.5.0",
     "axios": "^1.1.3",
     "expo": "^47.0.0",
+    "expo-app-loading": "^2.1.1",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-native": "0.70.5",
